--- a/src/app/my-form/form-field/form-field.component.scss
+++ b/src/app/my-form/form-field/form-field.component.scss
@@ -1,4 +1,5 @@
 .form-field-container {
+    background-color: #eee;
     .label {
         color: var(--form-fields-label-gray);
     }
@@ -7,8 +8,8 @@
     }
     .nested-group,
     .nested-array {
-        margin-bottom: 10px;
         margin-left: 10px;
+        padding-bottom: 10px;
     }
     .nested-field {
         margin-left: 10px;
