--- a/src/app/my-form/form-field/form-field.component.scss
+++ b/src/app/my-form/form-field/form-field.component.scss
@@ -12,6 +12,9 @@
         padding-bottom: 10px;
     }
     .nested-field {
-        margin-left: 10px;
+        padding: 0 10px;
+    }
+    .groupLable {
+        color: #007bff;
     }
 }
