--- a/src/scss/_variables.scss
+++ b/src/scss/_variables.scss
@@ -1,12 +1,15 @@
 :root {
     --color-primary-rgb: 41, 69, 255;
-    --color-primary: #2945ff;
-    --color-primary-active: #102bdb;
-    --color-primary-hover: #3953ff;
+    --color-primary: #5856d6;
+    --color-primary-active: #4645ab;
+    --color-primary-hover: #4b49b6;
+    --color-second: #6b7785;
     --color-white: #fff;
     --color-gray1: #ccc;
     --color-gray2: #999;
     --color-gray3: #666;
+    --color-gray4: #eee;
+    --color-gray5: #f3f4f7;
     --color-black: #000;
     //STANDARD 
     --standard-margin: 8px;
@@ -17,20 +20,25 @@
     --button-primary-background-color: var(--color-primary);
     --button-primary-background-color-active: var(--color-primary-active);
     --button-primary-background-color-hover: var(--color-primary-hover);
-    --button-primary-text-color: var( --color-white);
-    --button-primary-disabled: var(--color-gray1);
-    --button-primary-disabled-text: var(--color-primary);
+    --button-background-disabled: var(--color-gray3);
+    --button-border-disabled: var(--color-gray3);
+    --button-text-disabled: var(--color-white);
     --button-border-radius: 0.25;
     --button-disabled: var(--color-gray2);
     //FORM FIELDS
-    --form-fields-outline-checkbox: var(--color-primary);
-    --form-fields-background-checkbox-active: var(--color-primary-active);
+    --form-fields-background-gray: var(--color-gray5);
+    --form-fields-background-gray1: var(--color-gray3);
+    --form-fields-background-primary: var(--color-primary);
+    --form-fields-background-active: var(--color-primary-active);
     --form-fields-outline-border-primary: var(--color-primary);
     --form-fields-outline-border-gray: var(--color-gray1);
     --form-fields-outline-border-gray2: var(--color-gray2);
     --form-fields-outline-border-hover: var( --color-primary-hover);
-    --form-fields-background-primary: var(--color-primary);
     --form-fields-label-primary: var(--color-primary);
     --form-fields-label-gray: var(--color-gray3);
     --form-fields-label-black: var(--color-black);
+    --form-fields-label-white: var( --color-white);
+    --text-white-color: var(--color-white);
+    --text-primary-background-color: var(--color-primary);
+    --text-second-background-color: var(--color-second);
 }
